h2. Changelog

h3. Versión 2.3RC4

* Incluida recuperación en modificación de entidades no básicas
* Fixed bug en la suma de los conceptos económicos manuales al recuperar.

h3. Versión 2.3RC3

* Copia conceptos económicos

h3. Versión 2.2.1

* Fixed bug botón editar solicitud para usuario.
* Eliminado el job de restauran modificaciones.

h3. Versión 2.2

* Incluida la Resolución.
* Servicio de Ticketing.
* Incluidos Servicios Web.
* Incluido servicio de Terceros de Platino.
* Incluida la firma con el sello.
* Incluida la cesión de datos.
* Incluida la factura electrónica (visor y conversor _facturae_).
* Modificación de Solicitudes (no está todo lo posible incluido).
* Generación de contraseñas para nuevos usuarios automática.
* Aportación de documentación: Se listan ahora todos los tipos de documentos.
* Fixed bug agregando firma a documentos.
* Fixed comprobación de campos null en grupos.
* Fixed bug grupo de direcciones y envío de datos.
* Fixed bug: Reevaluar criterios.
* Fixed bug: Eventos DOM.
* Fixed some bugs.


h3. Versión 2.1.2

* Nuevos métodos que permiten sobreescribir distintas validaciones de los conceptos económicos.
* Nuevos métodos en Evaluación: getEvaluacion.
* Nuevas validaciones en el DSL (mostrarSiCheck, mostrarSiCombo, mostrarSiRadioBooleano, noForm, SubirArchivo).
* Mejorada la validación de SubirArchivo.
* Verificación: Permite recuperar documentos noProcede de verificaciones anteriores.
* Soporte actualización WebSigner Platino (14 de Febrero)
* Baremación: Se permite recalcular las evaluaciones a los administradores.
* Verificación: Se añade un documento de verificación con el estado noProcede por cada tipo de documento encontrado de tipo múltiple.
* Añadidos los nombres de la aplicación en los informes.
* Añadido ejemplo de firmas múltiples
* Añadido controlador para el WS de escucha al Portafirma (no aplica cambios).
* Añadidos permisos del rol Lector.
* Actualización de librerías