@@ -2,8 +2,10 @@ h2. Changelog
 
 h3. Versión 2.3RC4
 
-* Incluida recuperación en modificación de entidades no básicas
+* Permitida la edicion de la fecha de finalización de una modificacion.
+* Incluida recuperación en modificación de entidades no básicas.
 * Fixed bug en la suma de los conceptos económicos manuales al recuperar.
+* Fixed bug en Aportación de documentación
 
 h3. Versión 2.3RC3
 
